# cellNexusPy

./: CHANGELOG.md  README.md  cellNexusPy_test.ipynb  cellnexuspy.yml  demo.ipynb  interactive.py  make_readme.sh  pyproject.toml
.ipynb_checkpoints/: cellNexusPy_test-checkpoint.ipynb  demo-checkpoint.ipynb  whole_run-checkpoint.py
cellnexuspy/: __init__.py
cellnexuspy/.ipynb_checkpoints/: __init__-checkpoint.py
curated_atlas_query_py/: __init__.py
curatedatlasquerypy/: __init__.py
dev/: metacell.ipynb  pseudobulk.ipynb  singlecell_counts.ipynb
dev/.ipynb_checkpoints/: cellNexusPy_test-checkpoint.ipynb
hcaquery/: __init__.py
test/: test_all.py
test/.ipynb_checkpoints/: test_all-checkpoint.py
